Added web links and filled in text.

--- a/_posts/2017-07-08-adobexd.markdown
+++ b/_posts/2017-07-08-adobexd.markdown
@@ -4,3 +4,6 @@ title:  "Adobe XD - Not yet ready for prime time"
 date:   2017-08-17 23:18:50 -0400
 categories: ux
 ---
+
+
+<h3>This post is in progress, please check back soon.</h3>
